# pkg/controller/v1/tag.controller.go
@@ -1,22 +1,71 @@
 package controller_v1
 
 import (
+	"github.com/go-playground/validator/v10"
 	"github.com/gofiber/fiber/v2"
+	"github.com/spitfireooo/form-constructor-server-v2/pkg/model/request"
+	"github.com/spitfireooo/form-constructor-server-v2/pkg/service"
+	"log"
+	"net/http"
 )
 
 // @Summary	CreateTag
-// @Tags tag
+// @Tags Tag
 // @Description Create Tag
 // @ID create-tag
 // @Accept json
 // @Produce	json
 // @Param input	body request.Tag true "body info"
 // @Success 200 {object} response.Tag
-// @Router /api/v1/user/:userId/tag [post]
+// @Router /api/v1/tag [post]
 func CreateTag(ctx *fiber.Ctx) error {
-	return ctx.Status(fiber.StatusOK).JSON(fiber.Map{
-		"message": "CreateTag",
-	})
+	body := new(request.Tag)
+
+	if err := ctx.BodyParser(body); err != nil {
+		log.Println("Error in parsing request", err)
+		return ctx.Status(http.StatusBadRequest).JSON(fiber.Map{
+			"message": "Error in parsing request",
+		})
+	}
+
+	if err := validator.New().Struct(body); err != nil {
+		log.Println("Validation errors", err)
+		return ctx.Status(fiber.StatusBadRequest).JSON(fiber.Map{
+			"message": "Validation errors",
+		})
+	}
+
+	if tag, err := service.CreateTag(*body); err != nil {
+		log.Println("Error in permission service", err)
+		return ctx.Status(fiber.StatusBadRequest).JSON(fiber.Map{
+			"message": "Error in user service",
+		})
+	} else {
+		return ctx.Status(fiber.StatusOK).JSON(fiber.Map{
+			"data": tag,
+		})
+	}
+}
+
+// @Summary	GetAllUserTags
+// @Tags Tag
+// @Description Get All User Tags
+// @ID get-all-user-tags
+// @Accept json
+// @Produce	json
+// @Success 200 {array} response.UserTag
+// @Router /api/v1/tag [get]
+func GetAllUserTags(ctx *fiber.Ctx) error {
+	if tags, err := service.GetAllUserTags(); err != nil {
+		log.Println("Error in permission service", err)
+		return ctx.Status(fiber.StatusBadRequest).JSON(fiber.Map{
+			"message": "Error in user service",
+		})
+	} else {
+		return ctx.Status(fiber.StatusOK).JSON(fiber.Map{
+			"data": tags,
+		})
+	}
 }
 
 // @Summary	GetAllTags
@@ -26,11 +75,18 @@ func CreateTag(ctx *fiber.Ctx) error {
 // @Accept json
 // @Produce	json
 // @Success 200 {array} response.Tag
-// @Router /api/v1/user/:userId/tag [get]
+// @Router /api/v1/tag [get]
 func GetAllTags(ctx *fiber.Ctx) error {
-	return ctx.Status(fiber.StatusOK).JSON(fiber.Map{
-		"message": "GetAllTags",
-	})
+	if tags, err := service.GetAllTags(); err != nil {
+		log.Println("Error in permission service", err)
+		return ctx.Status(fiber.StatusBadRequest).JSON(fiber.Map{
+			"message": "Error in user service",
+		})
+	} else {
+		return ctx.Status(fiber.StatusOK).JSON(fiber.Map{
+			"data": tags,
+		})
+	}
 }
 
 // @Summary	GetOneTag
@@ -40,11 +96,20 @@ func GetAllTags(ctx *fiber.Ctx) error {
 // @Accept json
 // @Produce	json
 // @Success 200 {object} response.Tag
-// @Router /api/v1/user/:userId/tag/:id [get]
+// @Router /api/v1/tag/:id [get]
 func GetOneTag(ctx *fiber.Ctx) error {
-	return ctx.Status(fiber.StatusOK).JSON(fiber.Map{
-		"message": "GetOneTag",
-	})
+	id, _ := ctx.ParamsInt("id")
+
+	if tags, err := service.GetOneTag(id); err != nil {
+		log.Println("Error in permission service", err)
+		return ctx.Status(fiber.StatusBadRequest).JSON(fiber.Map{
+			"message": "Error in user service",
+		})
+	} else {
+		return ctx.Status(fiber.StatusOK).JSON(fiber.Map{
+			"data": tags,
+		})
+	}
 }
 
 // @Summary	UpdateTag
@@ -53,13 +118,37 @@ func GetOneTag(ctx *fiber.Ctx) error {
 // @ID update-tag
 // @Accept json
 // @Produce	json
-// @Param input	body request.Tag true "body info"
+// @Param input	body request.TagUpdate true "body info"
 // @Success 200 {object} response.Tag
-// @Router /api/v1/user/:userId/tag/:id [patch]
+// @Router /api/v1/tag/:id [patch]
 func UpdateTag(ctx *fiber.Ctx) error {
-	return ctx.Status(fiber.StatusOK).JSON(fiber.Map{
-		"message": "UpdateTag",
-	})
+	body := new(request.TagUpdate)
+	id, _ := ctx.ParamsInt("id")
+
+	if err := ctx.BodyParser(body); err != nil {
+		log.Println("Error in parsing request", err)
+		return ctx.Status(http.StatusBadRequest).JSON(fiber.Map{
+			"message": "Error in parsing request",
+		})
+	}
+
+	if err := validator.New().Struct(body); err != nil {
+		log.Println("Validation errors", err)
+		return ctx.Status(fiber.StatusBadRequest).JSON(fiber.Map{
+			"message": "Validation errors",
+		})
+	}
+
+	if tag, err := service.UpdateTag(*body, id); err != nil {
+		log.Println("Error in permission service", err)
+		return ctx.Status(fiber.StatusBadRequest).JSON(fiber.Map{
+			"message": "Error in user service",
+		})
+	} else {
+		return ctx.Status(fiber.StatusOK).JSON(fiber.Map{
+			"data": tag,
+		})
+	}
 }
 
 // @Summary DeleteTag
@@ -69,9 +158,18 @@ func UpdateTag(ctx *fiber.Ctx) error {
 // @Accept json
 // @Produce	json
 // @Success 200 {string} string
-// @Router /api/v1/user/:userId/tag/:id [delete]
+// @Router /api/v1/tag/:id [delete]
 func DeleteTag(ctx *fiber.Ctx) error {
-	return ctx.Status(fiber.StatusOK).JSON(fiber.Map{
-		"message": "DeleteTag",
-	})
+	id, _ := ctx.ParamsInt("id")
+
+	if err := service.DeleteTag(id); err != nil {
+		log.Println("Error in permission service", err)
+		return ctx.Status(fiber.StatusBadRequest).JSON(fiber.Map{
+			"message": "Error in user service",
+		})
+	} else {
+		return ctx.Status(fiber.StatusOK).JSON(fiber.Map{
+			"data": "Tag deleted",
+		})
+	}
 }
